--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.0.5-canary.38",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
     "react": "^18",
