--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "sass": "^1.69.7"
   },
