--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ next-env.d.ts
 /dist
 /dist/cache/webpack/client-development/*
 /dist/cache/webpack/server-development/*
+dist/cache/webpack/client-development/*
